# GenDiL

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark-advection-3d.cpp  benchmark-advection-6d.cpp  benchmark-batched-global-face-advection-operator-1d-p0.cpp  benchmark-batched-global-face-advection-operator-1d-p1.cpp  benchmark-batched-global-face-advection-operator-1d-p2.cpp  benchmark-batched-global-face-advection-operator-1d-p3.cpp  benchmark-batched-global-face-advection-operator-1d.cpp  benchmark-batched-global-face-advection-operator-2d-p0.cpp  benchmark-batched-global-face-advection-operator-2d-p1.cpp  benchmark-batched-global-face-advection-operator-2d-p2.cpp  benchmark-batched-global-face-advection-operator-2d-p3.cpp  benchmark-batched-global-face-advection-operator-2d.cpp  benchmark-batched-global-face-advection-operator-3d-p0.cpp  benchmark-batched-global-face-advection-operator-3d-p1.cpp  benchmark-batched-global-face-advection-operator-3d-p2.cpp  benchmark-batched-global-face-advection-operator-3d-p3.cpp  benchmark-batched-global-face-advection-operator-3d.cpp  benchmark-batched-global-face-advection-operator-4d-p0.cpp  benchmark-batched-global-face-advection-operator-4d-p1.cpp  benchmark-batched-global-face-advection-operator-4d-p2.cpp  benchmark-batched-global-face-advection-operator-4d-p3.cpp  benchmark-batched-global-face-advection-operator-4d.cpp  benchmark-batched-global-face-advection-operator-5d-p0.cpp  benchmark-batched-global-face-advection-operator-5d-p1.cpp  benchmark-batched-global-face-advection-operator-5d-p2.cpp  benchmark-batched-global-face-advection-operator-5d-p3.cpp  benchmark-batched-global-face-advection-operator-5d.cpp  benchmark-batched-global-face-advection-operator-6d-p0.cpp  benchmark-batched-global-face-advection-operator-6d-p1.cpp  benchmark-batched-global-face-advection-operator-6d-p2.cpp  benchmark-batched-global-face-advection-operator-6d-p3.cpp  benchmark-batched-global-face-advection-operator-6d.cpp  benchmark-batched-mass-operator-1d.cpp  benchmark-batched-mass-operator-2d.cpp  benchmark-batched-mass-operator-3d.cpp  benchmark-batched-mass-operator-4d.cpp  benchmark-batched-mass-operator-5d.cpp  benchmark-batched-mass-operator-6d.cpp  benchmark-batched-mass-operator.cpp  (+31 more)
benchmarks/include/: benchmark-batched-global-face-advection-operator.hpp  benchmark-batched-mass-operator.hpp  benchmark-common.hpp  benchmark-face-read-dofs-policy.hpp
examples/: CMakeLists.txt
examples/advection/: CMakeLists.txt  advection-convergence-1d.cpp
examples/mass/: CMakeLists.txt  mass-convergence-1d.cpp  mass-convergence-2d.cpp  mass-convergence-6d.cpp
examples/poisson/: CMakeLists.txt  poisson-convergence-1d.cpp  poisson-convergence-2d.cpp  poisson-convergence-6d.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/gendil/: CMakeLists.txt  batched-cell-test-helpers.hpp  mfem_point_matrix_decoder_test_helpers.hpp  test-advection-1d-generic.cpp  test-advection-3d-generic.cpp  test-advection-h-adaptivity-2d.cpp  test-advection-hp-adaptivity-3d.cpp  test-advection-p-adaptivity.cpp  test-anisotropic-diffusion-coefficient.cpp  test-batched-face-speed-of-light-read-cell.cpp  test-batched-global-face-advection-operator.cpp  test-batched-global-face-speed-of-light-operator.cpp  test-batched-grad-grad-debug-variants.cpp  test-batched-grad-grad-operator.cpp  test-batched-grad-grad-write-coverage.cpp  test-batched-l2-error.cpp  test-batched-l2-projection-operator.cpp  test-batched-linear-form-operator.cpp  test-batched-mass-inverse-operator.cpp  test-batched-mass-operator.cpp  test-batched-mixed-mass-operator.cpp  test-batched-speed-of-light-operator.cpp  test-boundary-coefficient-field-inputs.cpp  test-boundary-mass-2d-generic.cpp  test-boundary-sipdg-2d-generic.cpp  test-coefficient-field-inputs-cell.cpp  test-cross-dim.cpp  test-diffusion-3d-generic.cpp  test-diffusion-consistency-only.cpp  test-diffusion-symmetry-1d-minimal.cpp  test-diffusion-symmetry-face-analysis.cpp  test-diffusion-symmetry-manual.cpp  test-diffusion-symmetry-only.cpp  test-diffusion-symmetry-per-face.cpp  test-diffusion-symmetry-plus-minus-faces.cpp  test-diffusion-symmetry-vs-legacy.cpp  test-diffusion-vary-sigma.cpp  test-diffusion-volume-only.cpp  test-face-advection-split-mesh-2d-ascii.cpp  test-face-advection-split-mesh.cpp  (+25 more)
tests/integration/mfem/: CMakeLists.txt  test-advection-1d.cpp  test-advection-2d-mfem-mesh.cpp  test-advection-2d.cpp  test-advection-3d-mfem-mesh.cpp  test-advection-3d-single-element.cpp  test-advection-3d.cpp  test-advection-6d-mfem-mesh.cpp  test-diffusion-3d-unstructured.cpp  test-diffusion-3d.cpp  test-diffusion-4d-tensor-product-H1.cpp  test-diffusion-legacy-plus-jacobian.cpp  test-face-advection-zero-flux.cpp  test-interior-coefficient-field-inputs-h1.cpp  test-many-product-mesh.cpp  test-mass-3d.cpp  (+18 more)
tests/unit/: CMakeLists.txt  test-bsr-block-layout.cpp  test-bsr-device-apply.cpp  test-bsr-dof-layout.cpp  test-cell-iterator-device.cpp  test-cell-iterator-filtered-sync-experiment.cpp  test-cell-iterator.cpp  test-constexprloop.cpp  test-coo-device-apply.cpp  test-coo-matrix.cpp  test-csc-device-apply.cpp  test-csc-matrix.cpp  test-csr-device-apply.cpp  test-csr-matrix.cpp  test-cuda-work-item-sync.cpp  test-device-kernel-configuration-one-index-batched.cpp  test-device-kernel-configuration-one-index-fail.cpp  test-device-kernel-configuration.cpp  test-dof-to-quad-policies.cpp  test-dot.cpp  test-face-read-dofs-direct-global-vector.cpp  test-face-read-dofs-direct-global.cpp  test-facet-quad-data.cpp  test-garbage-collector.cpp  test-getpoint.cpp  test-gmres.cpp  test-hypre-csr-matrix.cpp  test-kernel-configuration.cpp  test-matrix-assembly-defaults.cpp  test-mpi.cpp  test-named-field-requirements.cpp  test-openmp.cpp  test-pullback-generic-cell.cpp  test-pullback-skeleton.cpp  test-raw-coo-assembly.cpp  test-read-write.cpp  test-sgbsr-matrix.cpp  test-solvers.cpp  test-sparse-matrix-apply-arithmetic.cpp  test-threaded-dot-shared-arena.cpp  (+5 more)
(+503 files in other folders)
